src/styles/style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/*  End of reset */

html {
  height: 100%;
  font-size: 16px;
  overflow-x: hidden;
  font-family: 'Proza Libre', sans-serif;
}

#___gatsby, #gatsby-focus-wrapper, body {
  height: 100%;
}

h1 {
  font-family: 'Cormorant Garamond', serif;
  font-size: 4em;
  color: #383838;
  text-align: center;
  margin: 15% auto;
  font-weight: bold;
  line-height: 1.2;
}

.body {
  text-align: center;
  font-size: 1.2em;
  line-height: 1.5;
  margin: 15% auto;
}

.flex {
  display: flex;
  flex-direction: column;
  height: 100%;
  visibility: hidden;
}

.no-overflow {
  overflow-y:  hidden;
}

.bottom-half {
  flex-grow: 1;
  background: #383838;
  color: #ffffff;
  padding: 10% 0 0 0;
}

.list {
  font-size: 2em;
  margin: 10%;
}

.list > li {
  margin: 5% auto;
}

.list > li:nth-child(odd) {
  text-align: left;
}

.list > li:nth-child(even) {
  text-align: right;
}

@media screen and (min-width: 700px) {
  html {
    font-size: 18px;
  }

  .list {
    margin: 10% 25%;
  }

}

@media screen and (min-width: 1000px) {
  html {
    font-size: 20px;
  }

  h1 {
    margin: 5% auto;
  }
  
  .body {
    margin: 5% auto;
  }

  .bottom-half {
    padding: 3% 0 0 0;
  }

  .list {
    margin: 5% 25%;
  }

}
@media screen and (min-width: 1300px) {
  html {
    font-size: 24px;
  }

  .list {
    margin: 5% 30%;
  }

}

